fix spacing

--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -117,7 +117,6 @@ footer
 
     > *
         background-image: url(/images/paper.png)
-        padding: 1em
         width: 100%
         height: 100%
         border-radius: 1em
@@ -140,8 +139,9 @@ footer
     position: relative
 
     header
-        margin-left: -28px
         position: absolute
+        top: 10px
+        left: -20px
 
         .text
             font-size: 1.2em
@@ -175,8 +175,9 @@ footer
 
 
     article
-        padding-top: 40px
         overflow-y: scroll
+        padding-left: 0.5em
+        padding-right: .5em
 
 
 .costume-ideas-list
